Bottom bar issues on mobile

--- a/www/index.css
+++ b/www/index.css
@@ -720,7 +720,6 @@ span.drop-cap2 {
 #footer #next-icon {
     border: none;
     text-align: center;
-    width: 100%;
     position: relative;
     background-position-x: 50%;
 }
