--- a/www/style.css
+++ b/www/style.css
@@ -192,7 +192,8 @@ aside nav {
     top: 0;
     left: 50%;
     height: 100%;
-    min-width: 11em;
+    width: 60%;
+    min-width: 12.189em;
     -webkit-transform: translate(-50%);
     -moz-transform: translate(-50%);
     -ms-transform: translate(-50%);
@@ -373,7 +374,7 @@ button,
     opacity: 0;
     transition: opacity 0.1s;
     height: 100%;
-    width: 33%;
+    width: 4.083em;
 }
 
 .sound .media-icon,
@@ -383,7 +384,7 @@ button,
 .sound #restart-icon {
     opacity: 1;
     height: 100%;
-    width: 33%;
+    width: 4.083em;
 }
 
 #play-icon,
@@ -465,6 +466,34 @@ header #title {
 @media screen and (min-width: 600px) {
     header #title {
         left: 13rem;
+    }
+}
+@media screen and (max-width:450px){
+    .media-icon,
+    .sound .media-icon,
+    #play-icon,
+    .sound #play-icon,
+    #autoplay-icon,
+    .sound.autoplay #autoplay-icon,
+    .sound #autoplay-icon,
+    #restart-icon,
+    .sound #restart-icon,
+    .playing #play-icon,
+    #sound-icon {
+        opacity: 0;
+        transition: opacity 0.1s;
+        height: 100%;
+        width: 33%;
+    }
+
+    .sound .media-icon,
+    .sound #play-icon,
+    .sound.autoplay #autoplay-icon,
+    .sound #autoplay-icon,
+    .sound #restart-icon {
+        opacity: 1;
+        height: 100%;
+        width: 33%;
     }
 }
 
